--- a/MatchaServer/WebRoot/WEB-INF/web.xml
+++ b/MatchaServer/WebRoot/WEB-INF/web.xml
@@ -20,6 +20,18 @@
 	</servlet-mapping>
 	<!-- 左侧菜单end -->
 
+	<!-- MatchaServer render插件 begin -->
+	<servlet>
+		<servlet-name>render</servlet-name>
+		<servlet-class>org.matcha.server.web.servlet.RenderServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>render</servlet-name>
+		<url-pattern>/render</url-pattern>
+	</servlet-mapping>
+	<!-- MatchaServer render插件 end -->
+
 	<!-- MatchaServer 监听守护进程begin -->
 	<servlet>
 		<servlet-name>collectDaemon</servlet-name>
